--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ name: PollyNg
 author: Polly Ng
 qq: 373285694
 email: pollyng@foxmail.com
-# duoshuo: yonsm
+duoshuo: pollyng
 # beian: 浙ICP备12026616号
 # cnzz: 119959
-weibo: Elepant_Juice
+weibo: 373285694@qq.com
 github: Pollyreal
 pygments: true
 safe: true
