--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ duoshuo: pollyng
 # cnzz: 119959
 weibo: 373285694@qq.com
 github: Pollyreal
+githubrepo: pollyreal.github.io
 pygments: true
 safe: true
 paginate: 20
