--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: pollyng@foxmail.com
 duoshuo: pollyng
 # beian: 浙ICP备12026616号
 # cnzz: 119959
-weibo: 373285694@qq.com
+weibo: 1558085754
 github: Pollyreal
 githubrepo: pollyreal.github.io
 rouge: true
